Fix: Eliminar login Docker Registry - Cesar Ulises Saldivar Chavez

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ on:
     branches: [ main ]
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository_owner }}/devops-automation-tools
+  IMAGE_NAME: devops-automation-app
 
 jobs:
   # Job de análisis de código y calidad
@@ -104,19 +103,12 @@ jobs:
       
     - name: Configurar Docker Buildx
       uses: docker/setup-buildx-action@v3
-      
-    - name: Login al registro
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Extraer metadatos
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: devops-automation-app
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -151,7 +143,7 @@ jobs:
     - name: Desplegar aplicación
       run: |
         echo "🚀 Desplegando aplicación a producción..."
-        echo "Imagen: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+        echo "Imagen: ${{ env.IMAGE_NAME }}:latest"
         echo "Commit: ${{ github.sha }}"
         echo "Build: ${{ github.run_number }}"
         
